@startuml
class manager {
    name: Char
    ' target_id_type: Selection
    ' source_hostname: Char
    ' source_port: Integer
    ' source_database: Char
    ' source_login: Char
    ' source_password: Char
    ' source_lang: Char
    ' target_hostname: Char
    ' target_port: Integer
    ' target_database: Char
    ' target_login: Char
    ' target_password: Char
    ' model_disable_default: Text
    ' field_disable_default: Text
    ' model_exception_words: Char
    ' model_analyze_default: Text
    ' field_analyze_default: Text
    ' repeating_models: Text
    ' field_disable_words: Text
    ' modules_to_install: Text
    ' workflow_models: Char
    ' target_lang: Char
    ' log: Text
    ' note: Html
}
class action{
    name: Char
    ' state: Selection
    ' source_domain: Char
    ' blocked: Boolean
    ' sequence: Integer
    ' repeating_action: Boolean
    ' from_rec_id: Integer
    ' to_rec_id: Integer
    ' source_id_exp: Char
    ' s_records: Integer
    ' target_model_id: Many2one
    ' t_records: Integer
    ' target_id_type: Selection
    ' log: Text
    ' note: Html
    ' target_id_prefix: Char
}
class external_model{
    name: Char
    ' sequence: Integer
    ' type: Selection
    ' model: Char
    ' order: Integer
    ' records: Integer
    ' fields_to_read: Char
}
class external_model_record{
    name: Char
    ' ext_id: Char
    ' external_model_id: Many2one
}
class value_mapping_field{
    name: Char
    ' field_description: Char
    ' relation: Char
    ' relation_field: Char
    ' ttype: Char
    ' required: Char
    ' function: Char
    ' type: Selection
}
class field_mapping{
    ' blocked: Boolean
    ' type: Selection
    ' state: Selection
    ' source_field: Char
    ' target_field: Char
    ' expression: Text
    ' model_field: Char
    ' note: Html
    ' source_field_ttype: Char
    ' target_field_ttype: Char
}

manager *-- action : action_ids
manager *-- external_model: external_model_ids
manager *-- value_mapping_field: value_mapping_field_id
action *-- field_mapping: 'field_mapping_ids'
action -- manager: manager_id
action -- external_model: external_model_id
external_model -- external_model_record: external_model_id

external_model -- manager: manager_id
external_model *-- external_model_record: external_model_record_ids
external_model *-- field: field_ids
external_model *-- action: source_action_ids
external_model *-- action: target_action_ids

field_mapping -- manager: id_manager
field_mapping -- field: source_field_id 
field_mapping -- field: target_field_id 
field_mapping -- value_mapping_field: value_mapping_field_id 
field_mapping -- field: model_field_id
field_mapping -- action: action_id
field_mapping -- external_model: target_model_id
field_mapping -- external_model: source_model_id
@enduml